# ccfoundry-agent-kit

./: .gitignore  .npmignore  CONTRIBUTING.md  Dockerfile.cloudrun  LICENSE  Makefile  README.md  SECURITY.md  deploy.sh  package.json  tutorial.md
.github/workflows/: ci.yml
apps/agent-dev-board-api/: README.md  agents.yaml  pyproject.toml
apps/agent-dev-board-api/src/agent_dev_board_api/: app.py  cloud_run.py  local_agents.py  skill_store.py
apps/agent-dev-board-api/tests/: test_cloud_run.py  test_local_agents.py  test_security_helpers.py
apps/agent-dev-board-web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: agent-dev-board.md  architecture.md  cloud-run-deployment.md  foundry-bounty-email-notifications.md  foundry-onboarding.md  gitea-changelog.md  non-goals.md  philosophy.md  protocol.md  quickstart.md  resource-cost-accounting-implementation-review.md  resource-cost-accounting-plan.md  sdk.md  security.md  standards.md
examples/me_agent/: .env.example  README.md  pyproject.toml
examples/me_agent/agent_space/: SOUL.md  config.yaml  journal.md  mcp_servers.yaml  notes.md  task.md  todo.md
examples/me_agent/agent_space/reflections/: README.md  config.yaml  daily_review.txt  micro_reflect.txt
examples/me_agent/agent_space/skills/verilog_rra/: SKILL.md
examples/me_agent/src/me_agent_example/: app.py
ops/litellm/: foundry_usage_callback.py
schemas/: agent-manifest.schema.json  chat-request.schema.json  chat-response.schema.json
scripts/: deploy-cloudrun.sh  dev-board-static-server.py  dev-board.mjs
(+29 files in other folders)
