[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccfoundry-agent-dev-board-api"
version = "0.1.0"
description = "Local testing API for the open-source CCFoundry Agent Kit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ccfoundry-agent-kit",
  "fastapi>=0.115,<1.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
